# web_crawler

./: .ocamlformat  LICENSE  Makefile  README.md  dune-project  dune-workspace  web_crawler.opam
lib/: crawler.ml  crawler_effect.ml  dune  effects.ml  traditional_crawler.ml
test/: dune
